Cleaned up some of the code. Updated build system and configuration file.